@@ -51,7 +51,7 @@ class WindowsFrontend(ui.Application):
     def on_quit(self):
         log.debug("frontend on_quit...")
         if hasattr(self, "tasklist") and self.tasklist:
-            log.debug("stopping background task %s" % self.tasklist.name)
+            log.debug("stopping background task: '%s'" % self.tasklist.name)
             self.tasklist.cancel()
             self.tasklist.join(1)
             if self.tasklist.isAlive():
